HelloUltraviolet/Fixtures/RejectedSource/FFI/UnsupportedExternABI/Source/Main.uv
//! Rejected FFI specimen for unsupported extern ABI strings.

extern "fantasy-abi" {
    public procedure importedValue() -> i32
}

